fix small screen display issues like heading too high, white space on resume page, add _redirects file for Netlify to correctly handles urls.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,16 +30,11 @@ body {
   }
 
   /* Footer socials */
-  .social li {
-    list-style-type: none;
-    display: inline;
-    padding-right: 1rem;
-  }
-
-  .social li a:hover {
+  .social i:hover {
     color: #C20024;
   }
-  
-  .social li a {
+
+  .social i {
+    font-size: 1.2rem;
     color: antiquewhite;
   }
